# orchestra

./: .gitignore  AUDIT_TRACKER.md  CHANGELOG.md  Cargo.toml  DEEP_AUDIT_PROMPT.md  DEEP_AUDIT_REPORT_FINAL.md  DOC_SYNC_PROMPT.md  MOBILE_DESIGN_PROMPTS.md  README.md  ROADMAP.md  build.rs  build_agent.sh  clean_patch.patch  fix_agent.rs  fix_agent_cargo.py  fix_all.py  fix_all2.py  fix_all_compiler_errors.py  fix_all_compiler_errors_2.py  fix_all_compiler_errors_3.py  fix_all_issues.py  fix_all_part2.py  fix_amsi_defense.py  fix_borrow.py  fix_builder.py  fix_callback.py  fix_cfg.py  fix_deps.sh  fix_env_sandbox.py  fix_etw.py  fix_evasion.py  fix_harden.py  fix_hkdf.py  fix_hollowing.py  fix_imports.py  fix_main_api.py  fix_nulls.py  fix_obs.py  fix_optimizer.py  fix_optimizer2.py  (+103 more)
.cargo/: config.toml
.pkgconfig/: xi.pc
agent/: Cargo.toml  build.rs  fix_all.sh  fix_errors.sh  fix_final_amsi.py  fix_hollowing.py  fix_syscall_macro.py  fix_syscalls.py  patch2.py  patch_amsi_defense.py  patch_hollowing.py  patch_injection.py  patch_junk_macro.py  patch_obfuscated.py  patch_optimizer.py  patch_optimizer_full.py  patch_outbound.py  patch_pe_hardener.py  patch_pe_resolve.py  rewrite_lib.py  rewrite_outbound.py
agent/benches/: agent_benchmark.rs
agent/ebpf/: hide_files.bpf.c  hide_network.bpf.c  hide_process.bpf.c
agent/resources/: placeholder_driver.xor
agent/src/: adaptive_timing.rs  adcs_attacks.rs  amsi_defense.rs  assembly_loader.rs  browser_data.rs  bti_pac_bypass.rs  c2_doh.rs  c2_graph.rs  c2_http.rs  c2_quic.rs  c2_smb.rs  c2_ssh.rs  callback_exec.rs  cet_bypass.rs  cfg_bypass.rs  code_cave.rs  coff_loader.rs  com_hijack.rs  config.rs  container.rs  coop.rs  dpapi_backup.rs  ebpf_evasion.rs  edr_bypass_transform.rs  edr_bypass_transform_aarch64.rs  entra_app_abuse.rs  entra_attacks.rs  entra_ptc.rs  env_check.rs  env_check_arm64_timer.rs  env_check_hpc.rs  env_check_rdtsc.rs  env_check_sandbox.rs  etw_patch.rs  etw_ti_bypass.rs  evasion.rs  exception_ssn.rs  fsops.rs  handlers.rs  hci_logging.rs  (+64 more)
agent/src/android/: env_checks.rs  jni_bridge.rs  mod.rs  persistence.rs  post_exploitation.rs
agent/src/forensic_cleanup/: event_log.rs  memory_protection.rs  mod.rs  ntfs_cleanup.rs  prefetch.rs  timestamps.rs  vss_cleanup.rs
agent/src/hardware_persistence/: boot_persistence.rs  mod.rs  thunderbolt_dma.rs
agent/src/injection/: callback_exec.rs  dll_sideload.rs  early_bird.rs  existing_module_stomp.rs  linux_inject.rs  mod.rs  module_stomp.rs  nt_create_thread.rs  phantom_dll_hollow.rs  remote_thread.rs  thread_hijack.rs  thread_pool.rs
agent/src/ios/: bridge.rs  env_checks.rs  mod.rs  persistence.rs  post_exploitation.rs
agent/src/kernel_callback/: deploy.rs  discover.rs  driver_db.rs  overwrite.rs  proxy.rs
agent/src/lpe/: mod.rs  named_pipe_impersonate.rs  print_spooler.rs  token_impersonate.rs
agent/src/persistence/: mod.rs  office_addin.rs
agent/src/recon/: ad_enum.rs  attack_paths.rs  cloud_fingerprint.rs  credential_attacks.rs  mod.rs  report.rs
agent/tests/: evasion_tests.rs  soak_test.rs
builder/: Cargo.toml  README.md  fix2.py  fix3.py  fix4.py  fix_strings.py  patch_agent.py  patch_apc.py  patch_dll.py  patch_everything.py  patch_rest.py  patch_sleep.py  patch_sleep_2.py  patch_sleep_3.py  patch_stomp.py  patch_stubs.py
builder/src/: build.rs  config.rs  deps.rs  lib.rs  main.rs  mobile.rs  pe_artifact_kit.rs
code_transform/: Cargo.toml
code_transform/src/: cfflatten.rs  cfflatten_aarch64.rs  lib.rs  opaque_predicates.rs  opcode_diversity.rs  opcode_diversity_aarch64.rs  regalloc.rs  regalloc_aarch64.rs  reorder.rs  reorder_aarch64.rs  runtime.rs  substitute.rs  substitute_aarch64.rs  virtualize.rs
code_transform/tests/: exec_transform.rs
code_transform_macro/: Cargo.toml
code_transform_macro/src/: lib.rs
code_transform_macro/tests/: transform_attr.rs
common/: Cargo.toml  build.rs
common/proptest-regressions/: forward_secrecy.txt
common/src/: audit.rs  config.rs  config_patch.py  config_patch3.py  crypto.rs  forward_secrecy.rs  hkdf_info.rs  ioc.rs  lib.rs  lock.rs  malleable_types.rs  normalized_transport.rs  p2p_proto.rs  tls_transport.rs  transport.rs  transport.rs.orig
console/: Cargo.toml  README.md
console/src/: main.rs
dev-server/: Cargo.toml
dev-server/src/: main.rs
doc/: crates.js  help.html  settings.html  src-files.js
docs/: ARCHITECTURE.md  C2_PANEL_STARTUP.md  CONFIGURATION.md  CONTRIBUTING.md  CONTROL_CENTER.md  C_SERVER.md  DESIGN.md  EVASION.md  FEATURES.md  FORENSICS.md  INJECTION_ENGINE.md  INTEGRATION_TEST_WALKTHROUGH.md  LAUNCHER.md  LOCAL_TESTING_GUIDE.md  P2P_MESH.md  (+11 more)
hollowing/: Cargo.toml
hollowing/src/: lib.rs  windows_impl.rs
junk_macro/: Cargo.toml
junk_macro/src/: lib.rs
launcher/: Cargo.toml
launcher/src/: main.rs
launcher/tests/: e2e_deployment.rs  hollowing_test.rs
module_loader/: Cargo.toml
module_loader/src/: drop_guard.rs  lib.rs  manual_map.rs  manual_map_guard.patch
nt_syscall/: Cargo.toml
nt_syscall/src/: lib.rs
optimizer/: Cargo.toml  build.rs
optimizer/benches/: optimizer_benchmark.rs
optimizer/src/: lib.rs
orchestra-pe-hardener/: Cargo.toml
orchestra-pe-hardener/src/: lib.rs
orchestra-server/: Cargo.toml
orchestra-server/src/: agent_link.rs  api.rs  audit.rs  auth.rs  build_handler.rs  build_queue.rs  config.rs  doh_listener.rs  http_c2.rs  lib.rs  main.rs  malleable.rs  mesh_controller.rs  redirector.rs  smb_relay.rs  state.rs  tls.rs
orchestra-server/static/: app.js  index.html  style.css
orchestra-server/tests/: dashboard_command_payloads.test.js  e2e.rs  identity.rs  outbound_e2e.rs  ws_auth.rs
payload-packager/: Cargo.toml
payload-packager/src/: main.rs  poly.rs  stub_emitter.rs
redirector/: Cargo.toml
redirector/src/: main.rs
shellcode_packager/: Cargo.toml
shellcode_packager/src/: emitter.rs  lib.rs  package.rs  pe.rs  x86.rs
string_crypt/: Cargo.toml  build.rs
string_crypt/src/: lib.rs
uefi-persistence/: Cargo.toml
uefi-persistence/src/: cleanup.rs  driver_stub.rs  esp.rs  lib.rs  nvram.rs  runtime_driver.rs
(+55 files in other folders)
